--- a/TodayNasa/src/pages/Home/Home.module.css
+++ b/TodayNasa/src/pages/Home/Home.module.css
@@ -26,7 +26,7 @@
   position: relative; 
   z-index: 1; 
   padding: 2rem;
-  background-color: rgba(128, 128, 128, 0.171);
+  background-color: rgba(36, 36, 36, 0.171);
   border-radius: 50px;
   margin-top: 100px;
   margin-left: -500px;
@@ -42,6 +42,7 @@
   font-size: 1.5rem;
   color: white;
   margin-bottom: 2rem;
+  font-weight: 700;
 }
 
 .startButton {
