--- a/TodayNasa/src/pages/Mars/Mars.module.css
+++ b/TodayNasa/src/pages/Mars/Mars.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   background-color: transparent; 
   position: relative; 
+  
 }
 
 .backgroundImage {
@@ -41,6 +42,7 @@
   font-size: 1.5rem;
   color: white;
   margin-bottom: 2rem;
+  font-weight: 700;
 }
 
 .startButton {
@@ -63,13 +65,16 @@
   flex-direction: column;
   align-items: center;
   margin-top: 9rem;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
+  padding-top: 60px;
+  margin-top: 450px;
 }
 
 .titleExem {
   font-size: 2.5rem;
   color: rgba(0, 0, 0, 0.795);
   margin-bottom: 1rem;
+ 
 }
 
 .exampleImages {
@@ -94,11 +99,15 @@
   font-size: 1.5rem;
   color: rgba(0, 0, 0, 0.650);
   margin: 0.5rem 0;
+
 }
 
 .exampleDescription {
   font-size: 1rem;
   color: gray;
+  background-color: #e3e6e4;
+  border-radius: 20px;
+  padding: 15px;
 }
 
 .backgroundSession {
@@ -178,4 +187,201 @@
 
 .numeroContainer span {
   font-size: 28px;
+}
+
+/* 1024px ou 1260px*/
+@media screen and (max-width: 1260px) {
+  
+  .exampleContainer .divParagrafos {
+    width: 78%; 
+    max-width: 100%;
+  }
+
+  .content {
+    width: 60vw;
+    margin: 0;
+    margin-top: 6em;
+    text-align: center;
+    font-size: x-small;
+  }
+
+  .exampleImages {
+    display: block;
+  }
+
+  .exampleContainer .titleExem {
+    margin:10px 0;
+    font-size: 2.0em;
+  }
+
+  .componenteImagemTexto {
+    margin-right: 100px;
+    margin-left: 100px;
+    height: 25vh;
+    align-items: center;
+  }
+}
+
+/* 768px ou 637px*/
+@media screen and (max-width: 637px) {
+  
+  .homeContainer content {
+    display: block;
+    margin: 0;
+    text-align: center;
+  }
+
+  .backgroundImage {
+    width: 100%;
+  }
+  
+  .exampleImages {
+    display: block;
+  }
+
+  .imagemContainer {
+    align-items: center;
+  }
+
+  .textoContainer p {
+    max-width: 225px;
+    margin: 17px;
+  }
+
+  .content {
+    padding: 3em;
+    width: 60vw;
+    margin: 0;
+    margin-top: 6em;
+    text-align: center;
+    font-size: x-small;
+  }
+
+  .titleExem {
+    margin: 30px;
+  }
+
+  .exampleContainer .divParagrafos {
+    width: 100%;
+    margin-bottom: 3em;
+  }
+
+  .exampleContainer .titleExem {
+    font-size: 2.0em;
+    margin-top: 0;
+  }
+
+  .exampleImages .exampleTitle{
+    margin: 25px;
+    margin-top: 5px;
+  }
+
+  .backgroundSession {
+      height: 30vh;
+      margin-bottom: 60px;
+  }
+
+  .backgroundSession .sessionTitle {
+    font-size: 2.3em;
+  }
+
+  .componenteImagemTexto {
+    /* margin-right: 100px;
+    margin-left: 100px; */
+    height: 50vh;
+  }
+
+  .startButton {
+    width: 100%;
+  }
+}
+
+/* 531px ou */
+@media screen and (max-width: 531px) { /* 531px ou 425px */
+  .homeContainer {
+    margin: 0;
+  }
+
+  .exampleContainer {
+    margin-top: 0;
+    width: 100%;
+  }
+
+  .exampleContainer .titleExem {
+    margin: 30px;
+  }
+
+  .exampleContainer .exampleImages {
+    width: 100%;
+  }
+
+  .exampleContainer .exampleImages .example img { /* imagens exemplo correto e incorreto*/
+    width: 100%;
+    /* width: 400px; */
+    height: 400px;
+  }
+
+  .backgroundImage {
+    width: 100%;
+  }
+
+  .lastContainer {
+    margin: 0;
+    display:contents; 
+    justify-content: center;
+  }
+
+  .componenteImagemTexto {
+    margin-bottom: 0.5em;
+    width: 90%;
+    max-width: 100%;
+    /* width: 100vw; */
+    /* max-width: 90vw; */
+    /* height: 40vh; */
+    height: auto;
+    flex-direction: column-reverse; 
+  }
+
+  .componenteImagemTexto .textoContainer {
+    margin-top: 8%;
+  }
+
+  .componenteImagemTexto .textoContainer p{
+    /* max-width: 100vw; */
+    max-width: 100%;
+    font-size: 1em;
+  }
+
+  .content {
+    width: 90%;
+    padding: 1rem;
+    height: 40vh;
+    margin-bottom: 151px;
+  }
+
+  .content .description{
+    margin-bottom: 25px;
+  }
+
+  .exampleContainer .divParagrafos {
+    max-width: 100%;
+    width: 90vw;
+    height: 8*0vh;
+    padding: 1.2em;
+    margin-top: 100px;
+  }
+
+  .exampleContainer .divParagrafos .pExem, .pExem2{
+    width: 100%;
+  }
+
+  .exampleContainer .divParagrafos .pExem, .pExem2 { /* espaçamento entre linhas da parte "Exemplificação"*/
+    line-height: 1.7;
+  }
+
+  .startButton {
+    width: 70%;
+    margin-left: 3.2em;
+    margin-right: 0;
+  }
 }
