--- a/TodayNasa/src/pages/Mars/Mars.module.css
+++ b/TodayNasa/src/pages/Mars/Mars.module.css
@@ -9,7 +9,7 @@
 }
 
 .backgroundImage {
-  background-image: url('../../assets/5.jpg');
+  background-image: url('../../assets/oport.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -67,7 +67,7 @@
   margin-top: 9rem;
   margin-bottom: 50px;
   padding-top: 60px;
-  margin-top: 450px;
+  margin-top: 200px;
 }
 
 .titleExem {
@@ -82,7 +82,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
-  width: 1200px;
+  width: 800px;
 }
 
 .example {
@@ -91,7 +91,7 @@
 }
 
 .exampleImage {
-  width: 1200px;
+  width: 900px;
   height: 800px;
 }
 
