--- a/TodayNasa/src/components/Footer/Footer.module.css
+++ b/TodayNasa/src/components/Footer/Footer.module.css
@@ -59,4 +59,74 @@
   background-color: #080f45;
   color: rgb(0, 0, 0);
 }
+
+
+
+@media screen and (max-width: 1024px) {
+  .navbar {
+    margin: 0;
+  }
+
+  .footerContent {
+    padding: 0em 3em;
+    text-align: center;
+    max-width: 300px;
+  }
+
+  .footerContent h4 {
+    font-size: 1.2em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    margin: 0;
+    padding: 0.5em 0em;
+    font-size: 0.9em;
+  }
+
+  .footerContent {
+    padding: 0em 3em;
+    text-align: center;
+    max-width: 300px;
+  }
+
+  .footerContent h4 {
+    font-size: 1em;
+  }
+}
+
+@media screen and (max-width: 531px) { /* 425px ou 531px*/
+  .footer {
+    display: block;
+    text-align: center;
+  }
+
+  .navbar {
+    /* max-width: 50%; */
+    padding: 1em 2em;
+    font-size: 0.7em;
+  }
+
+  .navbar .links_list {
+    padding: 0;
+  }
+
+  .navbar a {
+    margin: 5%;
+  }
+
+  .footerContent {
+    box-sizing: border-box;
+    padding: 0em 3em;
+    max-width: 400px;
+    margin: 0;
+  }
+
+  .footerContent h4, p {
+    margin-top: 0;
+    font-size: 0.8em;
+  }
+}
+  
   
