--- a/TodayNasa/src/pages/Home/Home.module.css
+++ b/TodayNasa/src/pages/Home/Home.module.css
@@ -274,6 +274,7 @@
   .exampleImages .exampleTitle{
     margin: 25px;
     margin-top: 5px;
+    width: 80%;
   }
 
   .backgroundSession {
@@ -316,13 +317,14 @@
   }
 
   .exampleContainer .exampleImages .example img { /* imagens exemplo correto e incorreto*/
-    width: 100%;
+    width: 80%;
     /* width: 400px; */
-    height: 400px;
+    height: 300px;
   }
 
   .backgroundImage {
     width: 100%;
+    height: 55vh;
   }
 
   .lastContainer {
@@ -380,8 +382,17 @@
   }
 
   .startButton {
-    width: 70%;
+    width: 50%;
     margin-left: 3.2em;
     margin-right: 0;
+    font-size: 1.5em;
+
+  }
+
+  .title{
+    font-size: 2.5em;
+  }
+  .description{
+    font-size: 1.5em;
   }
 }
